# libs/py-sdk/diabetes_sdk/api/default_api.py
@@ -24,6 +24,7 @@ from diabetes_sdk.models.history_record_schema_input import HistoryRecordSchemaI
 from diabetes_sdk.models.history_record_schema_output import HistoryRecordSchemaOutput
 from diabetes_sdk.models.profile_schema import ProfileSchema
 from diabetes_sdk.models.reminder_schema import ReminderSchema
+from diabetes_sdk.models.response_api_reminders_reminders_get import ResponseApiRemindersRemindersGet
 from diabetes_sdk.models.timezone import Timezone
 from diabetes_sdk.models.user_context import UserContext
 from diabetes_sdk.models.web_user import WebUser
@@ -352,7 +353,7 @@ class DefaultApi:
         _content_type: Optional[StrictStr] = None,
         _headers: Optional[Dict[StrictStr, Any]] = None,
         _host_index: Annotated[StrictInt, Field(ge=0, le=0)] = 0,
-    ) -> List[ReminderSchema]:
+    ) -> ResponseApiRemindersRemindersGet:
         """Api Reminders
 
 
@@ -395,7 +396,8 @@ class DefaultApi:
         )
 
         _response_types_map: Dict[str, Optional[str]] = {
-            '200': "List[ReminderSchema]",
+            '200': "ResponseApiRemindersRemindersGet",
+            '404': None,
             '422': "HTTPValidationError",
         }
         response_data = self.api_client.call_api(
@@ -427,7 +429,7 @@ class DefaultApi:
         _content_type: Optional[StrictStr] = None,
         _headers: Optional[Dict[StrictStr, Any]] = None,
         _host_index: Annotated[StrictInt, Field(ge=0, le=0)] = 0,
-    ) -> ApiResponse[List[ReminderSchema]]:
+    ) -> ApiResponse[ResponseApiRemindersRemindersGet]:
         """Api Reminders
 
 
@@ -470,7 +472,8 @@ class DefaultApi:
         )
 
         _response_types_map: Dict[str, Optional[str]] = {
-            '200': "List[ReminderSchema]",
+            '200': "ResponseApiRemindersRemindersGet",
+            '404': None,
             '422': "HTTPValidationError",
         }
         response_data = self.api_client.call_api(
@@ -545,7 +548,8 @@ class DefaultApi:
         )
 
         _response_types_map: Dict[str, Optional[str]] = {
-            '200': "List[ReminderSchema]",
+            '200': "ResponseApiRemindersRemindersGet",
+            '404': None,
             '422': "HTTPValidationError",
         }
         response_data = self.api_client.call_api(
